@@ -13,7 +13,8 @@ export(Hershey, adjustcolor, as.graphicsAnnot, as.raster, axisTicks,
        grSoftVersion, grey.colors, heat.colors, hsv, hcl, hcl.colors, hcl.pals,
        is.raster,
        make.rgb, n2mfrow, nclass.Sturges, nclass.FD, nclass.scott,
-       palette, pdf, pdf.options, pdfFonts, pictex, postscript,
+       palette, palette.pals, palette.colors,
+       pdf, pdf.options, pdfFonts, pictex, postscript,
        postscriptFonts, ps.options, rainbow, recordGraphics,
        recordPlot, replayPlot, rgb, rgb2hsv, savePlot, setEPS,
        setGraphicsEventEnv, setGraphicsEventHandlers, setPS,
